; ModuleID = '/home/carl/AnghaBench/linux/arch/arm/net/extr_bpf_jit_32.c_emit_a32_mov_i.c'
source_filename = "/home/carl/AnghaBench/linux/arch/arm/net/extr_bpf_jit_32.c_emit_a32_mov_i.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.jit_ctx = type { i32 }

@bpf2a32 = common dso_local global i32** null, align 8
@TMP_REG_1 = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, %struct.jit_ctx*)* @emit_a32_mov_i to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @emit_a32_mov_i(i32 %0, i32 %1, %struct.jit_ctx* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.jit_ctx*, align 8
  %7 = alloca i32*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store %struct.jit_ctx* %2, %struct.jit_ctx** %6, align 8
  %8 = load i32**, i32*** @bpf2a32, align 8
  %9 = load i64, i64* @TMP_REG_1, align 8
  %10 = getelementptr inbounds i32*, i32** %8, i64 %9
  %11 = load i32*, i32** %10, align 8
  store i32* %11, i32** %7, align 8
  %12 = load i32, i32* %4, align 4
  %13 = call i64 @is_stacked(i32 %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %28

15:                                               ; preds = %3
  %16 = load i32*, i32** %7, align 8
  %17 = getelementptr inbounds i32, i32* %16, i64 1
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* %5, align 4
  %20 = load %struct.jit_ctx*, %struct.jit_ctx** %6, align 8
  %21 = call i32 @emit_mov_i(i32 %18, i32 %19, %struct.jit_ctx* %20)
  %22 = load i32, i32* %4, align 4
  %23 = load i32*, i32** %7, align 8
  %24 = getelementptr inbounds i32, i32* %23, i64 1
  %25 = load i32, i32* %24, align 4
  %26 = load %struct.jit_ctx*, %struct.jit_ctx** %6, align 8
  %27 = call i32 @arm_bpf_put_reg32(i32 %22, i32 %25, %struct.jit_ctx* %26)
  br label %33

28:                                               ; preds = %3
  %29 = load i32, i32* %4, align 4
  %30 = load i32, i32* %5, align 4
  %31 = load %struct.jit_ctx*, %struct.jit_ctx** %6, align 8
  %32 = call i32 @emit_mov_i(i32 %29, i32 %30, %struct.jit_ctx* %31)
  br label %33

33:                                               ; preds = %28, %15
  ret void
}

declare dso_local i64 @is_stacked(i32) #1

declare dso_local i32 @emit_mov_i(i32, i32, %struct.jit_ctx*) #1

declare dso_local i32 @arm_bpf_put_reg32(i32, i32, %struct.jit_ctx*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
